rm #3470 default forbidden tables passed on to component, cannot be deleted